--- a/ccb-2019-11-17.md
+++ b/ccb-2019-11-17.md
@@ -276,6 +276,11 @@ choice.
 I'm interested to see what we'll decide at Monday's department meeting.
 What would you do?
 
+Even if we find someone to teach the course, do we have a space
+to teach it?  Unfortunately, I can't easily find that information.
+I know that our classrooms are comparatively full.  Oh well, that's
+a separate hurdle.
+
 We've made it through three courses so far.  On to the 200-level courses.
 We'll balance the two sections of CSC-207.  That's not ideal for the students
 who wanted the afternoon section.  But they'll get the same faculty member,
@@ -462,5 +467,4 @@ CSC-326 in each group and then four team members from CSC-324.
 
 ---
 
-*Version 0.1 of 2019-11-17.*
-
+*Version 1.0 of 2019-11-17.*
