Get ccb revisited musing closer to release.

--- a/ccb-2019-11-22.md
+++ b/ccb-2019-11-22.md
@@ -1,20 +1,99 @@
 Cuts, Closes, and Balances in CS for Spring 2020, Revisited
 ===========================================================
 
-While, for the most part, we are able to get through Cuts, Closes, and Balances in CS relatively smoothly, we did hit one large stumbling block.  It’s a complicated one, and may require some back story.  The basic issue is that under-enrollments (e.g., 15/20) can be as much of a problem as over-enrollments (e.g., 25/20).
+*Topics/tags: [Grinnell](index-grinnell), followup*
 
-That seems counter-intuitive, doesn’t it?  Here’s the thing.  Our curriculum is a finely balanced thing.  We graduate approximately sixty CS majors each year.  With eight regular faculty [1], we can offer three sections of each of our required 300-level courses each year.  That is, we have three sections of CSC 301, Algorithm Analysis (capped at 20), three sections of CSC 341, Automata, Formal Languages, and Computational Complexity (capped at 20), and three sections of CSC 324/326 (capped at 16/6, with an anticipated combined enrollment of 20).  If a class is under-enrolled in one semester, it is likely to be over-enrolled in a future semester.
+In [a recent musing](ccb-2019-11-17), I discussed some of the
+challenges that Grinnell's CS department was likely to face as we
+dealt with the cut, close, and balance stage of Grinnell's registration
+process.  While, for the most part, we are able to get through cuts,
+closes, and balances in CS relatively smoothly, we did hit one
+somewhat large stumbling block.  It's a complicated one, and may
+require some back story.  The basic issue is that under-enrollments
+by a few students (e.g., 15/20) can create as many problems as
+over-enrollments (e.g., 25/20) [1].
 
-Now, things aren’t quite that simple.  We encourage our students to study abroad.  Many do.  Some study abroad in locations that allow them to take CS courses.  When possible, we encourage them to take a course equivalent to CSC 341, which seems to be most similar from institution to institution.  We’ve also had some take CSC 301 equivalents abroad, although the content of those courses varies more.  And, once in a while, a student identifies a course that we can consider using as an equivalent to CSC 324.
+That seems counter-intuitive, doesn't it?  Here's the thing.  Our
+curriculum is a finely balanced thing.  We graduate approximately
+sixty CS majors each year.  With eight regular faculty [3,4], we
+can offer three sections of each of our required 300-level courses
+each year.  That is, we have three sections of CSC 301, _Algorithm
+Analysis_ (capped at 20), three sections of CSC 341, _Automata,
+Formal Languages, and Computational Complexity_ (capped at 20), and
+three sections of CSC 324/326, _Software Design_ (capped at 16/6,
+with an anticipated combined enrollment of 20).  So, if a class is
+under-enrolled in one semester, it is likely to be over-enrolled
+in a future semester.  To prevent future over-enrollments, we need
+to find a way to get more students to take the course now.
 
-In addition, “sixty majors each year” is an approximation.  While our enrollments seem to have stabilized at the size, we might have a few more or a few less.  If we have a few more, we might need to over-enroll some courses a bit.  But we want to limit over-enrollments.
+Now, things aren't quite that simple.  For example, we encourage
+our CS students to study abroad.  Many do.  Some even study abroad
+in locations that allow them to take CS courses.  If students are
+in such situations, many want to take a course that helps them make
+progress in the major.  In those cases, we encourage them to take
+a course equivalent to CSC 341, which seems to be most similar from
+institution to institution.  We've also had some take CSC 301
+equivalents abroad, although the content of those courses varies
+more.  And, once in a while, a student identifies a course that we
+can consider using as an equivalent to CSC 324.
 
-So then the question becomes: If we have fourteen open slots in CSC 301 and CSC 341 this semester, what obligation do we have to make sure those slots get filled now so that we don’t have fourteen students we have to find slots for next year?  Or, in colloquial terms, should we just kick the can down the road?
+In addition, “sixty majors each year” is an approximation.  While
+our enrollments seem to have stabilized at the size, we might have
+a few more or a few less.  If we have a few more, we might need to
+over-enroll some of those required 300-level courses a bit.  But
+we want to limit over-enrollments.
 
-If we want to address the issue, the next question becomes how we address the issue.  We can gently encourage our students to take CSC 301 and CSC 341 this semester.  We can identify students who are able to take the courses this semester, and kick them out of over-enrolled courses.  But if we kick them out, do we kick them out of required courses (which they will have the opportunity to take at another date), or elective courses (which they don’t strictly need to take)?
+So then the question becomes: If we have fourteen open slots in CSC
+301 and CSC 341 this semester, what obligation do we have to make
+sure those slots get filled now so that we don't have fourteen
+students we have to find slots for next year?  Or, in colloquial
+terms, how much can we kick the can down the road?
 
-As I said, it’s a difficult issue.
+Suppose we want to deal with the issue now.  The next question
+becomes how we address the issue.  We can gently encourage our
+students to take CSC 301 and CSC 341 next semester.  We can identify
+students who are able to take the courses next semester, and kick
+them out of over-enrolled courses.  But if we kick them out, do we
+kick them out of required courses (which they will have the opportunity
+to take at another date), or elective courses (which they don't
+strictly need to take)?
 
-I share it with you, in part, so that you understand the kinds of stresses faculty (and department chairs) encounter in what one would hope would be a straightforward process.  I have no good solutions.
+As I said, it's a difficult issue.  I'm not sure we ever came up with
+a definitive solution.  We may be trying a combination of things.  If
+you are a CS major, and you can take either CSC 301 or CSC 341 next
+semester, I encourage you to do so.
 
-[1] Including the position for which we are currently hiring.
+Why did I write this musing?  I share the issue with with you [5],
+in part, so that you understand the kinds of issues faculty (and
+department chairs) can encounter and how seemingly straightforward
+situations can have unexpected complexities.
+
+I had also hoped that musing about the issue would lead me to a flash
+of insight on how to deal with the issue.  Unfortunately, I have no
+good solutions.  But I do remember enjoying games of kick the can when
+I was young.
+
+---
+
+[1] Under-enrollments by many students (e.g., only 5/20 enrolled)
+are a different kind of problem.  In many cases, if a course has
+fewer than six students, the Dean [2] will cancel the course and
+try to shift the faculty member to another course.  Of course,
+that's not as easy as it sounds.  It's rare that under-enrollments
+and over-enrollments pair naturally.
+
+[2] Or at least the prior Deans.
+
+[3] A regular faculty member is one for which there is an assumption
+of continued employment (often predicated upon successful reviews).
+If I recall correctly, the majority of regular faculty are either
+tenure-line faculty or senior lecturers.
+
+[4] We have eight regular positions if you include the position for 
+which we are currently hiring.
+
+[5] Whoever you are.
+
+---
+
+*Version 1.0 of 2019-11-24.*
