--- a/ccb-2019-11-24.md
+++ b/ccb-2019-11-24.md
@@ -1,4 +1,4 @@
-Cuts, Closes, and Balances in CS for Spring 2020, Revisited
+Cuts, closes, and balances in CS for Spring 2020, revisited
 ===========================================================
 
 *Topics/tags: [Grinnell](index-grinnell), followup*
@@ -8,7 +8,7 @@ challenges that Grinnell's CS department was likely to face as we
 dealt with the cut, close, and balance stage of Grinnell's registration
 process.  While, for the most part, we are able to get through cuts,
 closes, and balances in CS relatively smoothly, we did hit one
-somewhat large stumbling block.  It's a complicated one, and may
+somewhat large stumbling block.  It's a complicated one and may
 require some back story.  The basic issue is that under-enrollments
 by a few students (e.g., 15/20) can create as many problems as
 over-enrollments (e.g., 25/20) [1].
@@ -63,8 +63,8 @@ a definitive solution.  We may be trying a combination of things.  If
 you are a CS major, and you can take either CSC 301 or CSC 341 next
 semester, I encourage you to do so.
 
-Why did I write this musing?  I share the issue with with you [5],
-in part, so that you understand the kinds of issues faculty (and
+Why did I write this musing?  I share the issue with you [5], in
+part, so that you understand the kinds of issues faculty (and
 department chairs) can encounter and how seemingly straightforward
 situations can have unexpected complexities.
 
