--- a/fisking-2019-11-25.md
+++ b/fisking-2019-11-25.md
@@ -23,24 +23,39 @@ as I am, I found [the following definition](https://scienceblogs.com/dispatches/
 > [blogosphere; very common] A point-by-point refutation of a blog entry or (especially) news story. A really stylish fisking is witty, logical, sarcastic and ruthlessly factual; flaming or handwaving is considered poor form. Named after Robert Fisk, a British journalist who was a frequent (and deserving) early target of such treatment.
 
 That definition is supposedly taken from
-<http://www.faqs.org/docs/jargon/F/fisking.html>, which no longer
-seems to exist.
+<http://www.faqs.org/docs/jargon/F/fisking.html>.  However, that page
+no longer seems to exist [2].  But we might as well credit it.
 
-https://en.wikipedia.org/wiki/Talk%3AFisking
+I'll admit that I found it more fun to look at [the Wikipedia talk
+page on fisking](https://en.wikipedia.org/wiki/Talk%3AFisking).  I
+don't read enough Wikipedia talk pages.  If they're all this
+interesting, I definitely should.
+
+In any case, I look forward to finding that deserves a fisking and
+then writing that fisking.  Maybe I'll even write a fisking [3]
+about one of my own musings or rants.
 
 ---
 
-Postscript: I found that my spell checker [2] did not know the term
+Postscript: I found that my spell checker [4] did not know the term
 "fisking", but Grammarly did.  On the other hand, Grammarly doesn't
-seem to know the name of my spell checker. 
+seem to know the name of my spell checker [5].
 
 ---
 
 [1] I likely would have done a Web search in any case.  I wonder if
 Grinnell has a license to the online _OED_.
 
-[2] `aspell`.
+[2] Or maybe it's just blank now.
+
+[3] I would much prefer to write "fisk" than "write a fisking".  But
+it doesn't seem to be a verb.
+
+[4] `aspell`.
+
+[5] It appears that `aspell` also doesn't know about `aspell`.  
+Fascinating.
 
 ---
 
-*Version 0.1 of 2019-11-25.*
+*Version 1.0 of 2019-11-25.*
